--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/my-app/node_modules
-/testimonios-freecodecamp/node_modules
 
+node_modules
 /.pnp
 .pnp.js
 
